--- a/Bookstore-SPA/package.json
+++ b/Bookstore-SPA/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "@auth0/angular-jwt": "^4.0.0",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@types/chart.js": "^2.9.19",
     "alertify.js": "^1.0.12",
+    "alertifyjs": "^1.13.1",
     "angular-bootstrap-md": "^9.0.1",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
@@ -33,6 +35,7 @@
     "chart.js": "^2.5.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "ng-alertify": "^1.0.2",
     "ng5-slider": "^1.2.4",
     "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.5.4",
