--- a/Bookstore-SPA/package.json
+++ b/Bookstore-SPA/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@types/chart.js": "^2.9.19",
+    "@types/googlemaps": "^3.39.4",
     "alertify.js": "^1.0.12",
     "alertifyjs": "^1.13.1",
     "angular-bootstrap-md": "^9.0.1",
