--- a/Bookstore-SPA/package.json
+++ b/Bookstore-SPA/package.json
@@ -37,6 +37,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ng-alertify": "^1.0.2",
+    "ng-click-outside": "^6.0.0",
     "ng5-slider": "^1.2.4",
     "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.5.4",
